<resources>
    <string name="app_name">Slam Book</string>
    <string name="name_text">Name</string>
    <string name="name_edit">Enter Name</string>
    <string name="nickname_text">Nickname</string>
    <string name="nickname_edit">Enter Nickname</string>
    <string name="age_text">Age</string>
    <string name="age_edit">Enter Age</string>
    <string name="birthday_text">When is your birthday?</string>
    <string name="birthday_edit">Enter Birthday</string>
    <string name="number_text">Phone number</string>
    <string name="email_text">What is your email address?</string>
    <string name="course_text">What is your course?</string>
    <string name="course_edit">Enter Course</string>
    <string name="dream_text">What is your ultimate dream?</string>
    <string name="dream_edit">Enter Dream</string>
    <string name="crush_text">Who is your secret crush?</string>
    <string name="crush_edit">Enter Name of Crush</string>
    <string name="message_text">What is your message for me?</string>
    <string name="number_edit">Enter Phone Number</string>
    <string name="email_edit">Enter Email Address</string>
    <string name="done_button">Done</string>
    <string name="hello_const">HELLO!!!</string>
    <string name="thankyou_text">Thank you for answering!</string>
</resources>
